--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,76 @@
     transform: rotate(360deg);
   }
 }
+
+/* main application */
+.app-container {
+  width: 475px;
+  margin-top: 5em;
+  margin-left: auto;
+  padding-left: 2em;
+  margin-right: auto;
+  padding-right: 2em;
+}
+
+.app-wrapper {
+  border: 1px solid black;
+
+  color: #444;
+  background-color: #fff;
+
+  display: grid;
+  grid-template-rows: auto auto 150px;
+  grid-template-columns: 1fr;
+  grid-gap: 50px;
+
+  justify-content: center;
+}
+
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}
+
+/* header */
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.header-content {
+  font-size: 40px;
+  text-align: center;
+}
+
+/* timeset */
+.timeset-container {
+  display: flex;
+  padding-top: 50px;
+  max-width: 100%;
+  justify-content: center;
+}
+
+.timeset-img {
+  max-height: 150px;
+}
+
+/* timer */
+.timer-container {
+  display:flex;
+  flex-direction: column;
+  align-items: start;
+
+  padding-top: 40px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.timer-select {
+  width: 100%;
+  margin: 10px 0px;
+}
